--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -48,6 +48,7 @@ commands:
     mcgod:
         description: Toggle mcMMO god-mode on/off
     mcstats:
+        aliases: [stats]
         description: Shows your mcMMO stats and xp
     mcremove:
         aliases: []
