--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -94,7 +94,13 @@ commands:
         aliases: [ac, a]
         description: Toggle Admin chat or send admin chat messages
     mcpurge:
-        description: Purge users with 0 powerlevel and/or who haven't connected in several months from the server DB.
+        description: Purge users with 0 powerlevel and/or who haven't connected in several months from the server DB.	
+    hardcore:
+        aliases: [mchardcore]	
+        description: Modify the mcMMO hardcore percentage or toggle hardcore mode on/off
+    vampirism:
+        aliases: [mcvampirism]	
+        description: Modify the mcMMO vampirism percentage or toggle vampirism mode on/off		
 permissions:
     mcmmo.*:
         default: false
@@ -587,6 +593,7 @@ permissions:
             mcmmo.commands.addxp: true
             mcmmo.commands.addxp.others: true
             mcmmo.commands.defaults: true
+            mcmmo.commands.hardcore.all: true
             mcmmo.commands.inspect.far: true
             mcmmo.commands.inspect.offline: true
             mcmmo.commands.mcability.others: true
@@ -599,6 +606,7 @@ permissions:
             mcmmo.commands.mmoedit.others: true
             mcmmo.commands.ptp.world.all: true
             mcmmo.commands.skillreset.all: true
+            mcmmo.commands.vampirism.all: true			
             mcmmo.commands.xprate.all: true
     mcmmo.commands.ability:
         default: false
@@ -623,6 +631,23 @@ permissions:
         description: Allows access to the excavation command
     mcmmo.commands.fishing:
         description: Allows access to the fishing command
+    mcmmo.commands.hardcore.*:
+        default: false
+        description: Implies access to all mcmmo.commands.hardcore permissions
+        children:
+            mcmmo.commands.hardcore.all: true
+    mcmmo.commands.hardcore.all:
+        description: Implies access to all mcmmo.commands.hardcore permissions
+        children:
+            mcmmo.commands.hardcore: true
+            mcmmo.commands.hardcore.modify: true
+            mcmmo.commands.hardcore.toggle: true
+    mcmmo.commands.hardcore:
+        description: Allows access to the hardcore command
+    mcmmo.commands.hardcore.modify:
+        description: Allows access to the hardcore command to modify the hardcore rate
+    mcmmo.commands.hardcore.toggle:
+        description: Allows access to the hardcore command to toggle hardcore on/off
     mcmmo.commands.herbalism:
         description: Allows access to the herbalism command
     mcmmo.commands.inspect.*:
@@ -945,6 +970,23 @@ permissions:
         description: Allows access to the taming command
     mcmmo.commands.unarmed:
         description: Allows access to the unarmed command
+    mcmmo.commands.vampirism.*:
+        default: false
+        description: Implies access to all mcmmo.commands.vampirism permissions
+        children:
+            mcmmo.commands.vampirism.all: true
+    mcmmo.commands.vampirism.all:
+        description: Implies access to all mcmmo.commands.vampirism permissions
+        children:
+            mcmmo.commands.vampirism: true
+            mcmmo.commands.vampirism.modify: true
+            mcmmo.commands.vampirism.toggle: true
+    mcmmo.commands.vampirism:
+        description: Allows access to the vampirism command
+    mcmmo.commands.vampirism.modify:
+        description: Allows access to the vampirism command to modify the vampirism rate
+    mcmmo.commands.vampirism.toggle:
+        description: Allows access to the vampirism command to toggle vampirism on/off
     mcmmo.commands.woodcutting:
         description: Allows access to the woodcutting command
     mcmmo.commands.xplock.*:
