--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -545,6 +545,18 @@ permissions:
         description: Allows participation in admin chat
     mcmmo.chat.partychat:
         description: Allows participation in party chat
+    mcmmo.item.*:
+        description: Implies all mcmmo.item permissions
+        children:
+            mcmmo.item.all: true 
+    mcmmo.item.all:
+        description: Implies all mcmmo.item permissions
+        children:
+            mcmmo.item.chimaerawing: true 
+    mcmmo.item.chimaerawing:
+        description: Allows use of Chimaera Wing item
+    mcmmo.motd:
+        description: Allows access to the motd
     mcmmo.commands.*:
         default: false
         description: Implies all mcmmo.commands permissions.
