Added hidden.yml option for using potion-based buffs instead of enchantment-based buffs.

--- a/src/main/resources/hidden.yml
+++ b/src/main/resources/hidden.yml
@@ -7,3 +7,5 @@ Options:
     Chunklets: true
     # Square root of the number of chunks to convert per tick.
     ConversionRate: 1
+    # true to use enchantment buffs for Super Breaker & Giga Drill Breaker, false to use potion buffs
+    EnchantmentBuffs: true
