--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1369,6 +1369,7 @@ permissions:
             mcmmo.tools.mcrefresh: true
             mcmmo.tools.mcremove: true
             mcmmo.tools.mmoedit: true
+            mcmmo.tools.updatecheck: true
     mcmmo.tools.mcgod:
         default: false
         description: Allows access to mcgod command
@@ -1396,3 +1397,6 @@ permissions:
             mcmmo.commands.mcpurge: true
             mcmmo.commands.mmoedit: true
             mcmmo.commands.mmoedit.others: true
+    mcmmo.tools.updatecheck:
+        default: false
+        description: Notifies admins if there is a new version of mcMMO available
